Correct font-size on mobile orientation

--- a/module_2/css/styles.css
+++ b/module_2/css/styles.css
@@ -3,10 +3,15 @@
 	box-sizing: border-box;
 }
 
+html {
+    -webkit-text-size-adjust: 100%;
+}
+
 body {
 	font-family: 'Montserrat', sans-serif;
 	max-width: 1200px;
 	margin: 0 auto;
+	padding: 0;
 }
 
 h1 {
